어플리케이션 빌드 문제 및 docker volume 학습

--- a/node_app/dockerfile
+++ b/node_app/dockerfile
@@ -1,9 +1,11 @@
 FROM node:10
 
-COPY package.js ./
+WORKDIR /usr/src/app
 
-COPY server.js ./
+COPY package.json ./
 
 RUN npm install
+
+COPY ./ ./
 
 CMD ["node", "server.js"]
